--- a/Bump/Bump.Android/Properties/AndroidManifest.xml
+++ b/Bump/Bump.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.bump" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" 
+					package="com.companyname.bump" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 	<application android:label="Bump.Android" android:theme="@style/MainTheme">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyC5GT9oX0991nYyeWmYeQ4WkZ3isCX_b90" />
