-finish signIn/signUp

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDatabase": "Server=(localdb)\\mssqllocaldb;Database=BumpDB;Trusted_Connection=True;"
+  }
 }
