--- a/Bump/Bump.Android/Properties/AndroidManifest.xml
+++ b/Bump/Bump.Android/Properties/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" 
 					package="com.companyname.bump" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:label="Bump.Android" android:theme="@style/MainTheme">
+	<application android:label="Bump.Android" android:theme="@style/MainTheme"
+		           android:usesCleartextTraffic="true">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyC5GT9oX0991nYyeWmYeQ4WkZ3isCX_b90" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<!-- Necessary for apps that target Android 9.0 or higher -->
