-create WorkThrough pages

--- a/Bump/Bump/Bump.csproj
+++ b/Bump/Bump/Bump.csproj
@@ -69,5 +69,8 @@
     <EmbeddedResource Update="Views\Suggestions.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\WorkThrough.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
