--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,6 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDatabase": "Server=(localdb)\\mssqllocaldb;Database=BumpDB;Trusted_Connection=True;"
+    "LocalDatabase": ""
+  },
+  "EmailConfiguration": {
+    "From": "",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "",
+    "Password": ""
   }
 }
