--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /API/appsettings.local_secrets.json
+/API/appsettings - Copy.Development.json
+/API/appsettings.local_secrets.Development.json
