--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDatabase": ""
+    "LocalDatabase": "",
+    "PublishDatabase": ""
   },
   "EmailConfiguration": {
     "From": "",
