--- a/Bump/Bump.Android/Properties/AndroidManifest.xml
+++ b/Bump/Bump.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="2.0.3" package="com.just.bump" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="3.0.0" package="com.just.bump" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:theme="@style/MainTheme" android:usesCleartextTraffic="true">
+	<application android:theme="@style/MainTheme" android:usesCleartextTraffic="true" android:label="Bump">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyC5GT9oX0991nYyeWmYeQ4WkZ3isCX_b90" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<!-- Necessary for apps that target Android 9.0 or higher -->
