--- a/API/appsettings.local_secrets.json
+++ b/API/appsettings.local_secrets.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LocalDatabase": "Server=(localdb)\\mssqllocaldb;Database=BumpDB;Trusted_Connection=True;",
-    "PublishDatabase": "Server=tcp:bumpapp.database.windows.net,1433;Initial Catalog=BumpDB;Persist Security Info=False;User ID=BumpAdmin;Password=$s1a2j3a45!S;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "PublishDatabase": "Server=tcp:bumpdbserver.database.windows.net,1433;Initial Catalog=BumpDB;Persist Security Info=False;User ID=BumpAdmin;Password=$s1a2j3a45!S;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "EmailConfiguration": {
     "From": "bump.mobile.just@gmail.com",
